@@ -1,100 +1,0 @@
-//
-// ********************************************************************
-// * License and Disclaimer                                           *
-// *                                                                  *
-// * The  Geant4 software  is  copyright of the Copyright Holders  of *
-// * the Geant4 Collaboration.  It is provided  under  the terms  and *
-// * conditions of the Geant4 Software License,  included in the file *
-// * LICENSE and available at  http://cern.ch/geant4/license .  These *
-// * include a list of copyright holders.                             *
-// *                                                                  *
-// * Neither the authors of this software system, nor their employing *
-// * institutes,nor the agencies providing financial support for this *
-// * work  make  any representation or  warranty, express or implied, *
-// * regarding  this  software system or assume any liability for its *
-// * use.  Please see the license in the file  LICENSE  and URL above *
-// * for the full disclaimer and the limitation of liability.         *
-// *                                                                  *
-// * This  code  implementation is the result of  the  scientific and *
-// * technical work of the GEANT4 collaboration.                      *
-// * By using,  copying,  modifying or  distributing the software (or *
-// * any work based  on the software)  you  agree  to acknowledge its *
-// * use  in  resulting  scientific  publications,  and indicate your *
-// * acceptance of all terms of the Geant4 Software license.          *
-// ********************************************************************
-//
-// $Id: G4NeutronKillerMessenger.hh 68048 2013-03-13 14:34:07Z gcosmo $
-//
-//---------------------------------------------------------------------------
-//
-// ClassName:   G4NeutronKillerMessenger
-//
-// Description: Messenger class
-//
-// Author:      V.Ivanchenko 26/09/00 for HARP software
-//
-//----------------------------------------------------------------------------
-//
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
-// Author: Mathieu Karamitros, kara@cenbg.in2p3.fr
-
-// The code is developed in the framework of the ESA AO7146
-//
-// We would be very happy hearing from you, send us your feedback! :)
-//
-// In order for Geant4-DNA to be maintained and still open-source,
-// article citations are crucial. 
-// If you use Geant4-DNA chemistry and you publish papers about your software, 
-// in addition to the general paper on Geant4-DNA:
-//
-// Int. J. Model. Simul. Sci. Comput. 1 (2010) 157–178
-//
-// we would be very happy if you could please also cite the following
-// reference papers on chemistry:
-//
-// J. Comput. Phys. 274 (2014) 841-882
-// Prog. Nucl. Sci. Tec. 2 (2011) 503-508 
-
-
-#ifdef DNADEV
-
-#ifndef G4NeutronKillerMessenger_h
-#define G4NeutronKillerMessenger_h 1
-
-#include "globals.hh"
-#include "G4UImessenger.hh"
-
-class G4NeutronKiller;
-class G4UIdirectory;
-class G4UIcmdWithADoubleAndUnit;
-
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
-
-class G4TrackKillerMessenger: public G4UImessenger
-{
-public:
-
-  G4TrackKillerMessenger(G4NeutronKiller*);
-  virtual ~G4TrackKillerMessenger();
-    
-  void SetNewValue(G4UIcommand*, G4String);
-    
-private:
-
-  // hide assignment operator as private
-  G4TrackKillerMessenger(const G4TrackKillerMessenger&);
-  G4TrackKillerMessenger& operator = (const G4TrackKillerMessenger &right);
-
-  G4NeutronKiller*   killer;
-    
-  G4UIdirectory* dir;
-  G4UIcmdWithADoubleAndUnit* eCmd;
-  G4UIcmdWithADoubleAndUnit* tCmd;
-};
-
-//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo......
-
-
-#endif
-#endif
